# chip8-egui

./: Cargo.toml  README.md  check.sh  chip8_ui.js  chip8_ui_bg.wasm  index.html
.github/workflows/: pages.yml  rust.yml
chip8/: Cargo.toml
chip8/src/: clock.rs  graphics.rs  input.rs  lib.rs  memory.rs  processor.rs
chip8_ui/: Cargo.toml
chip8_ui/assets/: sw.js
chip8_ui/src/: app.rs  gui.rs  lib.rs  main.rs
src/: audio.rs  gui.rs  main.rs
