[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]

[dependencies]
log = "0.4.17"
tokio = "1.27.0"

[features]
default = ["persistence"]
# Enables persistence support with `serde`.
persistence = ["serde", "serde-big-array"]

[dependencies.getrandom]
version = "0.2.8"
features = ["js"]

[dependencies.serde]
version = "1.0.159"
optional = true
features = ["derive"]

[dependencies.serde-big-array]
version = "0.5.1"
optional = true
