[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]

[dependencies]
log = "0.4.20"
tokio = "1.32.0"


[dependencies.getrandom]
version = "0.2.10"
features = ["js"]

[dependencies.serde]
version = "1.0.188"
optional = true
features = ["derive"]

[dependencies.serde-big-array]
version = "0.5.1"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

[features]
default = ["persistence"]
# Enables persistence support with `serde`.
persistence = ["serde", "serde-big-array"]
