[package]
name = "chip8_ui"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"


[dependencies]
# Local Dependencies
chip8 = { path = "../chip8" }

# Logging
log = "0.4.17"

# Error Handling
anyhow = "1.0.70"

# UI
egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "dark-light",
] }

# Serialization
serde = { version = "1.0.159", features = ["derive"] }

# Encoding and Decoding
bincode = "1.3.3"
bytemuck = "1.13.1"
epi = "0.17.0"


# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
rfd = "0.11.3"
cpal = "0.15.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Logging
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.34"
