[package]
name = "chip8_ui"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"


[dependencies]
# Local Dependencies
chip8 = { path = "../chip8" }

# Logging
log = "0.4.20"

# Error Handling
anyhow = "1.0.75"

# UI
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }

# Encoding and Decoding
bincode = "1.3.3"
bytemuck = "1.14.0"
epi = "0.17.0"


# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
rfd = "0.12.0"
cpal = "0.15.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Logging
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.37"
